--- a/sigs.yaml
+++ b/sigs.yaml
@@ -72,7 +72,7 @@
 
 - name: ADSA
   description: Association of Data Science and Analytics
-  chairs: Srujan Gupta
+  chairs: Harshit Agarwal
   meetingTime: ''
   meetingDay: ''
   meetingLoc: ''
